[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Inventory.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "show_inventory"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -90 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -90 ), Vector2( 0, -20 ) ]
}

[node name="Inventory" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2( 0, -90 )
transform = Transform2D( 1, 0, 0, 1, 0, -90 )

[node name="Outline" type="ColorRect" parent="CanvasLayer"]
margin_left = 304.0
margin_top = 20.0
margin_right = 779.0
margin_bottom = 101.0
color = Color( 1, 1, 1, 0.631373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fill" type="ColorRect" parent="CanvasLayer"]
margin_left = 309.0
margin_top = 27.0
margin_right = 772.0
margin_bottom = 95.0
color = Color( 0, 0, 0, 0.768627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Itens" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 315.0
margin_top = 32.0
margin_right = 765.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot0" type="TextureButton" parent="CanvasLayer/Itens" groups=[
"slots",
]]
process_priority = 10
visible = false
margin_right = 100.0
margin_bottom = 256.0
rect_min_size = Vector2( 100, 0 )
toggle_mode = true

[node name="Slot1" type="TextureButton" parent="CanvasLayer/Itens" groups=[
"slots",
]]
process_priority = 10
visible = false
margin_left = 258.0
margin_right = 358.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )
toggle_mode = true

[node name="Slot2" type="TextureButton" parent="CanvasLayer/Itens" groups=[
"slots",
]]
process_priority = 10
visible = false
margin_left = 310.0
margin_right = 410.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )
toggle_mode = true

[node name="Slot3" type="TextureButton" parent="CanvasLayer/Itens" groups=[
"slots",
]]
process_priority = 10
visible = false
margin_left = 362.0
margin_right = 462.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )
toggle_mode = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_inventory = SubResource( 1 )

[node name="Outside" type="ReferenceRect" parent="."]
margin_left = 260.0
margin_right = 840.0
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lower" type="ReferenceRect" parent="."]
margin_top = 128.0
margin_right = 1082.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lower2" type="ReferenceRect" parent="."]
margin_top = 2.0
margin_right = 254.0
margin_bottom = 123.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lower3" type="ReferenceRect" parent="."]
margin_left = 848.0
margin_right = 1084.0
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="CanvasLayer/Outline" to="." method="_on_Outline_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Outline" to="." method="_on_Outline_mouse_exited"]
[connection signal="mouse_entered" from="Outside" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Outside" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Lower" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Lower" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Lower2" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Lower2" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Lower3" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Lower3" to="." method="_on_Area2D_mouse_exited"]
